fix: horizontal scrollbar problem

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,8 @@
 .main-container{
   position: relative;
-  width: 100vw;
+  width: 100%;
   color: var(--font-color);
 }
+
+
 
